LAST VERSION UNTIL POI RELEASE DATE. WHAT YOU SHOULD EXPECT:

1. this version can boot in POI all the way to the game screen
2. UB will get an update a few hours before the official release
3. don't accept the update until you have game version 1.5.x
4. update to mod version 1.5.x is mandatory as many patches broke
5. you should be able to import modded campaigns in POI ;-)