@@ -1,7 +1,13 @@
 LAST VERSION UNTIL POI RELEASE DATE. WHAT YOU SHOULD EXPECT:
 
+LAST VERSION UNTIL POI RELEASE DATE. WHAT YOU SHOULD EXPECT:
+
 1. this version can boot in POI all the way to the game screen
 2. UB will get an update a few hours before the official release
 3. don't accept the update until you have game version 1.5.x
-4. update to mod version 1.5.x is mandatory as many patches broke
-5. you should be able to import modded campaigns in POI ;-)
+4. update to mod version 1.5.x is mandatory as patches got broken
+
+- added support to import modded campaigns in POI
+- added immunity to condition restrained by web to all spiders
+- changed Hand-and-a-Half to also grant +1 AC
+- fixed Binding Ice doing an ability check on break free action
